# Splot

./: .gitignore  .gitmodules  README.md  requirements.txt
GpsDemo/: gps_sensor.py  mock_adafruit_gps.py  requirements.txt  test_gps_sensor.py
LuxonisDemo/: imu.py  requirements.txt
ThreeAxisServoController/: ThreeAxisServoController.ino
backend/: index.ts  package-lock.json  package.json  tsconfig.json
backend/routes/: basicMapDataRoute.ts  explored.ts  exploredRoute.ts  markersRoute.ts
backend/types/: index.ts
backend/utils/: constants.ts
frontend/: .eslintrc.cjs  .gitignore  package-lock.json  package.json  test.test.ts  tsconfig.json  vite.config.ts
frontend/cypress/e2e/: map.cy.ts
frontend/cypress/support/: elements.ts
frontend/src/: App.tsx  constants.ts  index.css  main.tsx  utils.ts
frontend/src/api/: explored.ts  marker.ts  perimeter.ts  waypoint.ts
frontend/src/components/: Header.tsx  Map.tsx  MapCenterEvent.tsx  MapClick.tsx  MapClickEvent.tsx  MapEvents.tsx  MapExploredInput.tsx  MapExploredList.tsx  MapForm.tsx  MapInput.tsx  MapList.tsx  MapMarker.tsx  MapMarkerInput.tsx  MapMarkerList.tsx  MapPerimeterInput.tsx  MapPerimeterList.tsx  MarkerOnDoubleClick.tsx
frontend/src/components/tests/: MapInput.test.tsx  MapMarkerInput.test.tsx  MapMarkerList.test.tsx
frontend/src/pages/: Home.tsx
frontend/src/reducer/: mapReducer.ts
frontend/src/reducer/tests/: mapReducer.test.ts
frontend/src/tests/: setup.ts  util.test.ts
frontend/src/types/: index.ts
frontend/src/utils/: api.ts  constants.ts  helper.ts  marker-icons.ts
ros2/: main.py  requirements.txt
ros2/launch/: kinematics.yaml  mission_control_joy.yaml  mission_control_motion_test.yaml  simple_walk.yaml
ros2/ros2_ws/: zero_servos.sh
ros2/ros2_ws/mission_control_api_test_cpp/: CMakeLists.txt  package.xml
ros2/ros2_ws/mission_control_api_test_cpp/src/: mission_control_api_test_cpp.cpp
ros2/ros2_ws/src/mission_control_interfaces/: CMakeLists.txt  package.xml
ros2/ros2_ws/src/mission_control_interfaces/msg/: MissionControlToRobot.msg
ros2/ros2_ws/src/mission_control_motion_test/: package.xml  setup.cfg  setup.py
ros2/ros2_ws/src/mission_control_motion_test/mission_control_motion_test/: mission_control_motion_test.py
ros2/ros2_ws/src/motion_test/: package.xml  setup.cfg  setup.py
ros2/ros2_ws/src/motion_test/motion_test/: motion_test.py
ros2/ros2_ws/src/pa1616d_driver/: package.xml  setup.cfg  setup.py
ros2/ros2_ws/src/pa1616d_driver/pa1616d_driver/: pa1616d_driver.py
ros2/ros2_ws/src/py_pubsub/: package.xml  setup.py
ros2/ros2_ws/src/py_pubsub/py_pubsub/: publisher_member_function.py
ros2/ros2_ws/src/quadruped_kinematics/: CMakeLists.txt  package.xml
ros2/ros2_ws/src/quadruped_kinematics/include/quadruped_kinematics/: kinematics_lib.hpp  quadruped_kinematics_lib.hpp
ros2/ros2_ws/src/quadruped_kinematics/src/: kinematics_lib.cpp  quadruped_kinematics.cpp  quadruped_kinematics_lib.cpp
ros2/ros2_ws/src/quadruped_kinematics/test/: kinematics_lib_test.cpp
ros2/ros2_ws/src/servo_control/: package.xml  setup.cfg  setup.py
ros2/ros2_ws/src/servo_control/servo_control/: pca9685_driver.py
ros2/ros2_ws/src/servo_interfaces/: CMakeLists.txt  package.xml
ros2/ros2_ws/src/servo_interfaces/msg/: LegJointAngles.msg  QuadrupedJointAngles.msg  QuadrupedLegPositions.msg
ros2/ros2_ws/src/servo_interfaces/srv/: QuadrupedForwardKinematics.srv  QuadrupedInverseKinematics.srv
ros2/ros2_ws/src/simple_walk/: package.xml  setup.cfg  setup.py
ros2/ros2_ws/src/simple_walk/simple_walk/: simple_walk.py
ros2/ros2_ws/src/triple_axis_servo_controller_interfaces/: CMakeLists.txt  package.xml
ros2/ros2_ws/src/triple_axis_servo_controller_interfaces/msg/: TripleAxisServoControllerDriveCommand.msg  TripleAxisServoControllerFeedback.msg  TripleAxisServoControllerMotorCommand.msg  TripleAxisServoControllerStatus.msg
ros2/ros2_ws/src/triple_axis_servo_controller_py/: package.xml  serialcomms.py  setup.cfg  setup.py
ros2/ros2_ws/src/triple_axis_servo_controller_py/launch/: quadruped_triple_axis_servo_controllers_launch.py
ros2/ros2_ws/src/triple_axis_servo_controller_py/triple_axis_servo_controller_py/: triple_axis_servo_controller.py
scout/: build_cpp.sh
scout/demo_missions/: fly_mission.py  scout_search.py  sim.py  takeoff_and_land.py
scout/modules/: BuildRunMission.py  Commander.py  FlightProcess.py  PiCamera.py  RunSim.py  WaypointGen.py
scout/rpi_dep/: build.sh
scout/scout_search/: CMakeLists.txt  README.md  scout_search.cpp
silva/: README.md  requirements.txt  run_detection.py
