<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pa1616d_driver</name>
  <version>0.1.0</version>
  <description>Defines pa1616d_driver node for reading data from PA1616D GPS.</description>
  <maintainer email="pi@todo.todo">pi</maintainer>
  <license>Apache-2.0</license>

  <!-- Commented out because required package is not in rosdistro.
  <exec_depend>adafruit-circuitpython-gps</exec_depend>
  -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
