<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>servo_control</name>
  <version>0.1.0</version>
  <description>Defines pca9685_driver node for communicating with PCA9685 to control servos.</description>
  <maintainer email="pi@todo.todo">pi</maintainer>
  <license>Apache-2.0</license>

  <!-- Commented out because required package is not in rosdistro.
  <exec_depend>python3-adafruit-circuitpython-servokit-pip</exec_depend>
  -->

  <depend>servo_interfaces</depend>

  <exec_depend>python-rpi.gpio-pip</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
